--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
     "lucide-react": "^0.310.0",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "shadcn-ui": "^0.7.0",
+    "date-fns": "^3.6.0",
+    "recharts": "^2.8.0",
+    "framer-motion": "^11.0.0",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "react-scripts": "^5.0.1"
