--- a/package.json
+++ b/package.json
@@ -2,27 +2,28 @@
   "name": "crm-tramites",
   "version": "1.0.0",
   "description": "CRM Gestoría Romero",
-  "main": "layout.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0",
-    "lucide-react": "^0.310.0",
-    "tailwindcss": "^3.4.1",
-    "shadcn-ui": "^0.7.0",
+    "react-router-dom": "^6.8.1",
+    "lucide-react": "^0.453.0",
     "date-fns": "^3.6.0",
     "recharts": "^2.8.0",
     "framer-motion": "^11.0.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "react-scripts": "^5.0.1"
+    "@vitejs/plugin-react":"4.3.4",
+    "esbuild":"0.25.5",
+    "globals":"15.12.0",
+    "tailwindcss":"3.4.16",
+    "vite":"6.3.5",
+    "postcss": "^8.4.31",
+    "autoprefixer": "^10.4.16"
   },
   "browserslist": [
     ">0.2%",
