--- a/package.json
+++ b/package.json
@@ -7,23 +7,25 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.14",
+    "date-fns": "^3.6.0",
+    "framer-motion": "^11.0.0",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.453.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
-    "lucide-react": "^0.453.0",
-    "date-fns": "^3.6.0",
-    "recharts": "^2.8.0",
-    "framer-motion": "^11.0.0",
-    "lodash": "^4.17.21"
+    "recharts": "^2.8.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react":"4.3.4",
-    "esbuild":"0.25.5",
-    "globals":"15.12.0",
-    "tailwindcss":"3.4.16",
-    "vite":"6.3.5",
+    "@rollup/plugin-json": "^6.1.0",
+    "@vitejs/plugin-react": "4.3.4",
+    "autoprefixer": "^10.4.16",
+    "esbuild": "0.25.5",
+    "globals": "15.12.0",
     "postcss": "^8.4.31",
-    "autoprefixer": "^10.4.16"
+    "tailwindcss": "^3.4.16",
+    "vite": "6.3.5"
   },
   "browserslist": [
     ">0.2%",
